<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/history_constraint"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">


    <TextView
        android:id="@+id/textHeaderSettings"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/header_test_settings"
        android:textAppearance="@style/textHeader"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline9"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.14999998" />

    <Button
        android:id="@+id/buttonEn"
        style="@style/buttonWhite"
        android:layout_marginLeft="15dp"
        android:text="@string/language_english"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline9"
        app:layout_constraintHorizontal_bias="0.11"
        app:layout_constraintStart_toEndOf="@+id/buttonRu"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.00999999" />

    <Button
        android:id="@+id/buttonRu"
        style="@style/buttonWhite"
        android:text="@string/language_russian"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline9"
        app:layout_constraintHorizontal_bias="0.11"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.00999999" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"/>

    <TextView
        android:id="@+id/textView"
        style="@style/textHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_language"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textHeaderSettings"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.16000003" />


</androidx.constraintlayout.widget.ConstraintLayout>