<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scrollbars="vertical"
        app:layoutManager="LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRightBluetooth"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </androidx.recyclerview.widget.RecyclerView>

    <Button
        android:id="@+id/buttonConnect"
        android:layout_width="128dp"
        android:layout_height="36dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/style_btn_blue"
        android:shadowColor="@color/colorPrimaryDark"
        android:shadowRadius="1"
        android:text="@string/connect_btn"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonSkip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guidelineRightBluetooth" />

    <Button
        android:id="@+id/buttonSkip"
        android:layout_width="128dp"
        android:layout_height="36dp"
        android:background="@drawable/style_btn_white"
        android:shadowColor="@color/colorPrimaryDark"
        android:shadowRadius="1"
        android:text="@string/skip_btn"
        android:textAllCaps="false"
        android:textColor="@color/dark_ocean"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guidelineRightBluetooth"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineLeftBluetooth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineRightBluetooth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.7" />

    <TextView
        android:id="@+id/header"
        android:layout_width="215dp"
        android:layout_height="84dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="37dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/header"
        android:textAppearance="@style/textHeader"
        app:layout_constraintBottom_toTopOf="@+id/buttonConnect"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintStart_toStartOf="@+id/guidelineRightBluetooth"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>